@@ -43,7 +43,8 @@ def color(data):
 columns = [
     SequentialColumn(),
     MyColumn('name', tooltip='What about a stupid tooltip?', editable=True),
-    Column('age', format_func=format_func, editable=True, width=40),
+    Column('age', data_type=int, format_func=format_func, editable=True,
+           width=40),
     Column('bool', data_type=bool, editable=True, width=40),
     Column('worth', data_type=currency, editable=True),
     Column('city', visible=True, sorted=True),
